# J.A.R.V.I.S

./: .env.example  .gitignore  CLAUDE.md  README.md  README_NEW.md  SYSTEMD_SETUP.md  check_chromadb.py  conversation_history.json  debug_chromadb.py  discord-bot.service  dune_crafting.py  main.py  permanent_context.json  pyproject.toml  requirements.txt  start.sh  test_ollama_embeddings.py  test_vector_context.py  user_settings.json
.claude/: settings.local.json
.github/workflows/: deploy.yml
data/: dune_recipes.json  wow_runs.json
src/: config.py
src/admin/: actions.py  admin_processor.py  extractors.py  parser.py  permissions.py  utils.py
src/ai/: context_manager.py  crafting_module.py  handler.py  handler_refactored.py  openai_client.py  routing.py
src/cleaning/: __init__.py  cleaning_manager.py
src/commands/: admin.py  basic.py  cleaning.py  help.py  history.py  raiderio.py  search_context.py  vectordb.py  wow_characters.py
src/crafting/: handler.py
src/data/: persistence.py
src/events/: handlers.py
src/scraping/: __init__.py  web_scraper.py
src/search/: claude.py  claude_adapter.py  domain_filter.py  google.py  hybrid_search_provider.py  openai.py  openai_adapter.py  perplexity.py  perplexity_adapter.py  reddit_client.py  search_pipeline.py  web_extractor.py
src/utils/: __init__.py  logging.py  message_utils.py
src/vectordb/: __init__.py  chroma_client.py  context_enhancer.py  ollama_embeddings.py
src/wow/: __init__.py  character_manager.py  command_handlers.py  embed_factory.py  formatters.py  raiderio_client.py  run_manager.py  (+2 more)
