[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "discord-bot"
version = "1.0.0"
dependencies = [
    "discord.py==2.5.2",
    "python-dotenv==1.0.0",
    "groq==0.30.0",
    "openai==1.57.0",
    "google-api-python-client==2.108.0",
    "aiohttp==3.9.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]